# SlicerGeodesic

./: CMakeLists.txt  README.md
GeodesicSlicer/: CMakeLists.txt  GeodesicSlicer.py
